feat: 增加插件功能